[FIX] Fix database

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com
 spring.datasource.username=postgres.qjdthumoligzhzaadafg
 spring.datasource.password=pencarian_filtrasi_b_9
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
