--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Check out the Git repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Java toolchain
         uses: actions/setup-java@v4
@@ -49,4 +51,9 @@ jobs:
       - name: Run SonarQube analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar -Dsonar.projectKey=B9JagoNgadpro_PenjualanPembelian -Dsonar.organization=b9jagongadpro -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+        run: |
+          ./gradlew sonar -Dsonar.projectKey=B9JagoNgadpro_PenjualanPembelian \
+                          -Dsonar.organization=b9jagongadpro \
+                          -Dsonar.host.url=https://sonarcloud.io \
+                          -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+                          -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
