--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name="PencarianFiltrasi"
 spring.profiles.active=${PRODUCTION:dev}
 management.endpoints.web.exposure.include=prometheus
-microservice.game.url=http://35.240.130.147/api
+microservice.game.url=http://35.240.130.147/api/games
+
