--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+microservice.game.url=http://35.240.130.147/api/games
